# lunarfit

./: README.md  docker-compose.yml  entrypoint.prod.sh  package-lock.json
backend/: .gitignore  Dockerfile  README.md  entrypoint.prod.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/cycles/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/cycles/fixtures/: medication_data.yaml  type_data.yaml
backend/cycles/migrations/: 0001_initial.py  0002_alter_phase_cycle_id.py  0002_medicationcategory_medication.py  0003_phase_avg_duration.py
backend/lunarfit/: asgi.py  filters.py  settings.py  urls.py  wsgi.py
backend/lunarfit/quickstart/: serializers.py  views.py
backend/notes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/notes/fixtures/: symptom_data.yaml
backend/notes/migrations/: 0001_initial.py  0002_alter_symptom_value.py  0002_rename_day_symptom_date_and_more.py
backend/training/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/training/fixtures/: sports.yaml
backend/training/migrations/: 0001_initial.py  0002_alter_trs_acwr_alter_trs_trs_acwr.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/users/fixtures/: contraceptives.yaml  showtime.yaml
backend/users/migrations/: 0001_initial.py  0001_squashed_0007_rename_finished_onboarding_profile_onboarding_finished.py  0002_customuser_is_active_customuser_username.py  0002_medicationcategory_symptomcategory_medication_and_more.py  0002_menstrualcycle_phase.py  0002_onboarding_timestamp_alter_onboarding_cycle_duration_and_more.py  0003_alter_menstrualcycle_end_alter_menstrualcycle_start_and_more.py  0003_remove_customuser_username.py  0003_remove_phase_cycle_id_delete_menstrualcycle_and_more.py  0004_remove_symptom_symptom_category_remove_symptom_user_and_more.py  0005_remove_medication_medication_id_and_more.py  0006_onboarding.py  0007_rename_finished_onboarding_profile_onboarding_finished.py  0008_contraceptives_data.py  0009_remove_contraceptive_description_and_more.py
frontend/: Dockerfile  README.md  db.json  entrypoint.prod.sh  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/: App.vue
frontend/src/assets/: cycleData.json
frontend/src/boot/: axios.js  i18n.js
frontend/src/components/: AssessmentRequiredCard.vue  BackButtonText.vue  CheckboxInput.vue  CycleCarousel.vue  CycleCircle.vue  DateTodayPicker.vue  DateTodayPicker_symptom.vue  DropDownSingleSelect.vue  FormFieldText.vue  IconCheckbox.vue  IconSlider.vue  InputTextArea.vue  LineChart.vue  PhaseInfoCard.vue  PhaseInformation.vue  RadioToggle.vue  SectionContainer.vue  SliderWithLabel.vue  (+5 more)
frontend_old/: .dockerignore
frontend_old/src/: App.vue
(+69 files in other folders)
