[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jonas Trenkler <jonas.trenkler@posteo.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
djangorestframework = "^3.15.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}

[tool.poetry.group.dev.dependencies]
django-filter = "^24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
