[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jonas Trenkler <jonas.trenkler@student.htw-berlin.de>",
           "Lilly Mydlach <lilly.mydlach@student.htw-berlin.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
djangorestframework = "^3.15.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
django-cors-headers = "^4.3.1"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}

[tool.poetry.group.dev.dependencies]
django-filter = "^24.2"

[tool.poetry.group.dev_emacs.dependencies]
python-lsp-server = "^1.11.0"
pylsp-mypy = "^0.6.8"
python-lsp-isort = "^0.1"
python-lsp-black = "^2.0.0"
pyls-memestra = "^0.0.16"
pylsp-rope = "^0.1.16"
python-lsp-ruff = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
